@@ -698,8 +698,19 @@ register_configvar(group,
                 value  = True,
                 totext = _("Enforce lower case User-IDs."),
             )),
+            ("user_id_umlauts", DropdownChoice(
+                title = _("Umlauts in User-IDs"),
+                help  = _("Multisite does not support umlauts in User-IDs at the moment. To deal "
+                          "with LDAP users having umlauts in their User-IDs you have the following "
+                          "choices."),
+                choices = [
+                    ("replace",  _("Replace umlauts like \"&uuml;\" with \"ue\"")),
+                    ("skip",     _("Skip users with umlauts in their User-IDs")),
+                ],
+                default_value = "replace",
+            )),
         ],
-        optional_keys = ['scope', 'filter', 'filter_group', 'user_id', 'lower_user_ids'],
+        optional_keys = ['filter', 'filter_group', 'user_id', 'lower_user_ids', ],
     ),
     domain = "multisite",
     in_global_settings = False,
