@@ -56,6 +56,7 @@
     * 0356 FIX: Fixed exception caused by utf8 chars in tooltip text...
     * 0368 FIX: Generating selection id is hopefully now compatible to more systems...
     * 0374 FIX: Fixed syntax error in exception handler of LDAP search code...
+    * 0375 FIX: LDAP: Now handling user-ids with umlauts...
 
     WATO:
     * 0308 Multisite can now set rotation view permissions for NagVis...
